--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,444 +1,29 @@
+/* Import your desired components first */
+@import url(hacks/autoHidingBookmarks.css);
+@import url(hacks/button_effect_scale_onclick.css);
+@import url(hacks/hide_toolbox_top_bottom_borders.css);
+@import url(hacks/minimal_text_fields.css);
+@import url(hacks/minimal_toolbarbuttons.css);
+@import url(hacks/show_Windows_controls.css);
+@import url(hacks/urlbar_centered_text.css);
+@import url(hacks/window_control_fallback_for_custom_windows_theme.css);
 
 
-:root {
-  /* delay before expanding tabs, set to '0' for no delay */
-  --delay: 0.5s;
-  --transition-time: 0.2s;
-  --positionX1: 48px; /* '48px' for left, '0px' for right sidebar */
-  --positionX2: absolute; /* 'absolute' for left, 'none' for right sidebar */
-  /* width of the collapsed sidebar in fullscreen mode ('1px' or '48px') */
-  --fullscreen-sidebar-width: 1px;
+/*Import hacks */
+@import url(hacks/sideberyModsLEFT.css); 
+@import url(hacks/menuShow.css); 
+
+:root { 
+--tabs-border-color: transparent !important; 
 }
 
-/* macOS specific styles */
-@media (-moz-platform: macos) {
-  #TabsToolbar:not([customizing="true"]) {
-      visibility: collapse !important;
-  }
-
-  :root:not([customizing="true"]) #nav-bar:not([inFullscreen]) {
-      padding-left: 80px;
-  }
-
-  :root:not([customizing="true"]) #TabsToolbar .titlebar-buttonbox-container {
-      visibility: visible !important;
-      position: absolute;
-      top: 12px;
-      left: 0px;
-      display: block;
-  }
+#urlbar, #searchbar .searchbar-textbox {
+  font-family: JetBrains Mono !important; font-size: 12pt 
 }
 
-/* Linux/GTK specific styles */
-@media (-moz-gtk-csd-available) {
-  .browser-toolbar:not(.titlebar-color){ /* Fixes wrong coloring applied with --toolbar-bgcolor by Firefox (#101) */
-      background-color: transparent !important;
-      box-shadow: none !important;
-  }
-
-  #TabsToolbar:not([customizing="true"]) {
-      visibility: collapse !important;
-  }
-
-  #toolbar-menubar {
-      padding-top: 0px !important;
-  }
-
-  :root:not([customizing="true"]) #toolbar-menubar[inactive]+#TabsToolbar .titlebar-buttonbox-container {
-      visibility: visible !important;
-      position: absolute;
-      top: var(--uc-win-ctrl-vertical-offset);
-      display: block;
-      z-index: 101;
-  }
-
-  /* enable rounded top corners */
-  :root[tabsintitlebar][sizemode="normal"]:not([gtktiledwindow="true"]):not([customizing="true"]) #nav-bar {
-      border-top-left-radius: env(-moz-gtk-csd-titlebar-radius);
-      border-top-right-radius: env(-moz-gtk-csd-titlebar-radius);
-  }
-
-  /* window control padding values (these don't change the size of the actual buttons, only the padding for the navbar) */
-  :root[tabsintitlebar]:not([customizing="true"]) {
-      /* default button/padding size based on adw-gtk3 theme */
-      --uc-win-ctrl-btn-width: 38px;
-      --uc-win-ctrl-padding: 12px;
-      /* vertical offset from the top of the window, calculation: (1/2 * (NAVBAR_HEIGHT - BUTTON_HEIGHT)) */
-      --uc-win-ctrl-vertical-offset: 8px;
-      /* extra window drag space */
-      --uc-win-ctrl-drag-space: 20px;
-  }
-
-  :root[tabsintitlebar][lwtheme]:not([customizing="true"]) {
-      /* seperate values for when using a theme, based on the Firefox defaults */
-      --uc-win-ctrl-btn-width: 30px;
-      --uc-win-ctrl-padding: 12px;
-      /* vertical offset from the top of the window, calculation: (1/2 * (NAVBAR_HEIGHT - BUTTON_HEIGHT)) */
-      --uc-win-ctrl-vertical-offset: 5px;
-      /* extra window drag space */
-      --uc-win-ctrl-drag-space: 20px;
-  }
-
-  /* setting the padding value for all button combinations */
-  @media (-moz-gtk-csd-minimize-button),
-  (-moz-gtk-csd-maximize-button),
-  (-moz-gtk-csd-close-button) {
-      #nav-bar {
-          --uc-navbar-padding: calc(var(--uc-win-ctrl-btn-width) * 1);
-      }
-  }
-
-  @media (-moz-gtk-csd-minimize-button) and (-moz-gtk-csd-maximize-button),
-  (-moz-gtk-csd-minimize-button) and (-moz-gtk-csd-close-button),
-  (-moz-gtk-csd-maximize-button) and (-moz-gtk-csd-close-button) {
-      #nav-bar {
-          --uc-navbar-padding: calc(var(--uc-win-ctrl-btn-width) * 2);
-      }
-  }
-
-  @media (-moz-gtk-csd-minimize-button) and (-moz-gtk-csd-maximize-button) and (-moz-gtk-csd-close-button) {
-      #nav-bar {
-          --uc-navbar-padding: calc(var(--uc-win-ctrl-btn-width) * 3);
-      }
-  }
-
-  /* only applies padding/positioning if there is 1 or more buttons */
-  @media (-moz-gtk-csd-minimize-button),
-  (-moz-gtk-csd-maximize-button),
-  (-moz-gtk-csd-close-button) {
-      /* window controls on the right */
-      @media not (-moz-gtk-csd-reversed-placement) {
-          #nav-bar {
-              padding-inline: 0 calc(var(--uc-navbar-padding, 0) + var(--uc-win-ctrl-padding) + var(--uc-win-ctrl-drag-space)) !important;
-          }
-
-          .titlebar-buttonbox-container {
-              right: 0;
-          }
-      }
-
-      /* window controls on the left */
-      @media (-moz-gtk-csd-reversed-placement) {
-          #nav-bar {
-              padding-inline: calc(var(--uc-navbar-padding, 0) + var(--uc-win-ctrl-padding) + var(--uc-win-ctrl-drag-space)) 0 !important;
-          }
-
-          .titlebar-buttonbox-container {
-              left: 0;
-          }
-      }
-  }
-  
-  /* Hide window buttons in fullscreen */
-  #navigator-toolbox[style*="margin-top: -"] .titlebar-buttonbox-container,
-  [inDOMFullscreen="true"] .titlebar-buttonbox-container {
-      transform: translateY(-100px)
-  }
-  
-  
-}
-
-/* Windows specific styles */
-@media (-moz-platform: windows-win10) {
-  /* Hide main tabs toolbar */
-  :root[tabsintitlebar]{
-      --uc-window-control-width: 137px; /* Space at the right of nav-bar for window controls */
-      /* --uc-window-drag-space-width: 24px; */  /* To add extra window drag space in nav-bar */
-  }
-
-  #nav-bar{
-      border-inline: var(--uc-window-drag-space-width,80px) solid var(--toolbar-bgcolor) ;
-      border-inline-style: solid !important;
-      border-right-width: calc(var(--uc-window-control-width,0px) + var(--uc-window-drag-space-width,0px));
-
-      padding-top: .5px !important; /* This makes it possible to drag the maximized window. */
-      margin-left: -80px; /* Removes the space left when hiding .titlebar-buttonbox-container */
-  }
-  
-  #back-button { 
-  margin-top: -.5px !important; 
-}
-
-#forward-button { 
-  margin-top: -.5px !important; 
-}
-
-#reload-button { 
-  margin-top: -.5px !important; 
-}
-  
-#PanelUI-button {
-  margin-top: -.5px !important; 
-}
-  
-#nav-bar-overflow-button{
-  margin-top: -.5px !important; 
-}
-
-  :root {
-      --uc-toolbar-height: 32px;
-      --chrome-content-separator-color: none !important;
-  }
-
-  :root:not([uidensity="compact"]) {
-      --uc-toolbar-height: 38px;
-  }
-
-  #TabsToolbar {
-      visibility: collapse !important;
-  }
-
-  /* Hide the Windows controls on the left side. */
-  #TabsToolbar .titlebar-buttonbox-container {
-      visibility: hidden !important;
-  }
-  /* Line up the Windows controls with the rest of the icons in the toolbar. */
-  :root:not([sizemode="maximized"]) .titlebar-buttonbox-container {
-      margin-top: 3px;
-  }
-
-
-  :root:not([inFullscreen]) #nav-bar {
-      margin-top: calc(0px - var(--uc-toolbar-height));
-      z-index: 2;
-  }
-
-  #toolbar-menubar {
-      min-height: unset !important;
-      height: var(--uc-toolbar-height) !important;
-      position: relative;
-  }
-
-  /* For a rounded button design, uncomment both lines in .titlebar-buttonbox. */
-  .titlebar-buttonbox {
-      z-index:3 !important;
-      padding-right:3px;
-  }
-
-  .titlebar-buttonbox * {
-      border-radius: 5px;
-      width:35px;
-      height:38px;
-  }
-
-  #main-menubar {
-      -moz-box-flex: 1;
-      background-color: var(--toolbar-bgcolor,--toolbar-non-lwt-bgcolor);
-      background-clip: padding-box;
-      border-right: 30px solid transparent;
-      border-image: linear-gradient(to left, transparent, var(--toolbar-bgcolor,--toolbar-non-lwt-bgcolor) 30px) 20 / 30px;
-  }
-
-  #toolbar-menubar:not([inactive]) {
-      z-index: 2;
-  }
-
-  #toolbar-menubar[inactive] > #menubar-items {
-      opacity: 0;
-      pointer-events: none;
-      margin-left: var(--uc-window-drag-space-width,0px);
-  }
-
-  :root[inFullscreen] #nav-bar {
-      border-right: none !important;
-  }
-}
-
-
-/* General styles */
-#browser {
-  position: relative;
-}
-
-#nav-bar, #urlbar {
-  z-index: 100;
-}
-
-#sidebar-box:not([lwt-sidebar]){
-  appearance: unset !important;
-}
-
-#sidebar-box[sidebarcommand*="tabcenter"] {
-  z-index: 1;
-}
-
-#sidebar-box[sidebarcommand*="tabcenter"] #sidebar-header {
-  visibility: collapse;
+#TabsToolbar, #sidebar-header, #sidebar-splitter {
   display: none;
 }
-
-[sidebarcommand*="tabcenter"] #sidebar,
-#sidebar-box[sidebarcommand*="tabcenter"] {
-  min-width: 48px !important;
-  max-width: 48px !important;
-  width: 48px;
-}
-
-#sidebar-box[sidebarcommand*="tabcenter"]:not([hidden]) {
-  display: block;
-  position: var(--positionX2);
-  min-width: 48px;
-  max-width: 48px;
-  overflow: hidden;
-  border-right: 1px solid var(--sidebar-border-color);
-  z-index: 1;
-  top: 0;
-  bottom: 0;
-}
-
-/* use :where() selector to lower specificity */
-:where(#main-window[inFullscreen]) #sidebar-box[sidebarcommand*="tabcenter"]:not([hidden]) {
-  min-width: var(--fullscreen-sidebar-width) !important;
-  max-width: var(--fullscreen-sidebar-width) !important;
-}
-
-#sidebar-box[sidebarcommand*="tabcenter"]:hover #sidebar,
-#sidebar-box[sidebarcommand*="tabcenter"]:hover {
-  min-width: 10vw !important;
-  width: 30vw !important;
-  max-width: 200px !important;
-  z-index: 1 !important;
-  transition: all var(--transition-time) ease var(--delay);
-}
-
-/* used for delay function */
-#sidebar-box[sidebarcommand*="tabcenter"]:not(:hover) #sidebar,
-#sidebar-box[sidebarcommand*="tabcenter"]:not(:hover) {
-  transition: all var(--transition-time) ease 0s;
-}
-
-@media (width >= 1200px) {
-  #sidebar-box[sidebarcommand*="tabcenter"]:hover #sidebar,
-  #sidebar-box[sidebarcommand*="tabcenter"]:hover {
-      max-width: 250px !important;
-  }
-}
-
-[sidebarcommand*="tabcenter"] ~ #sidebar-splitter {
-  display: none;
-}
-
-[sidebarcommand*="tabcenter"] #sidebar {
-  max-height: 100%;
-  height: 100%;
-}
-
-#main-window:not([inFullscreen]) #sidebar-box[sidebarcommand*="tabcenter"]:not([hidden]) ~ #appcontent {
-  margin-left: var(--positionX1);
-}
-
-#main-window[inFullscreen]:not([inDOMFullscreen]) #sidebar-box[sidebarcommand*="tabcenter"]:not([hidden]) ~ #appcontent {
-  margin-left: var(--fullscreen-sidebar-width);
-}
-
-#main-window[inFullscreen] #sidebar {
-  height: 100vh;
-}
-
-[sidebarcommand*="tabcenter"] #sidebar-header {
-  background: #0C0C0D;
-  border-bottom: none !important;
-}
-
-[sidebarcommand*="tabcenter"] ~ #sidebar-splitter {
-  border-right-color: #0C0C0D !important;
-  border-left-color: #0C0C0D !important;
-}
-
-[sidebarcommand*="tabcenter"] #sidebar-switcher-target,
-[sidebarcommand*="tabcenter"] #sidebar-close {
-  filter: invert(100%);
-}
-
-@media (max-width: 630px) {
-  #urlbar-container {
-      min-width: 100% !important;
-  }
-
-  #menubar-items {
-      display: none !important;
-  }
-}
+/* note: if your minimize, exit, etc menu is gone, press alt, right click the menu bar and check mark it */
 
 
-
-
-/* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/window_control_fallback_for_custom_windows_theme.css made available under Mozilla Public License v. 2.0
-See the above repository for updates as well as full license text. */
-
-/* If one uses custom Windows theme, then Firefox uses high-contrast window control buttons. This style makes Firefox fall back to using normal window control style. */
-
-.titlebar-button{
-  background-color: transparent !important;
-  -moz-context-properties: stroke !important;
-  stroke: currentColor !important;
-}
-.titlebar-button:hover{ background-color: hsla(0,0%,100%,.32) !important }
-.titlebar-close:hover{ background-color: hsl(355,86%,49%) !important }
-
-.titlebar-close{ list-style-image: url(chrome://browser/skin/window-controls/close.svg) !important }
-.titlebar-min{ list-style-image: url(chrome://browser/skin/window-controls/minimize.svg) !important }
-.titlebar-max{ list-style-image: url(chrome://browser/skin/window-controls/maximize.svg) !important }
-.titlebar-restore{ list-style-image: url(chrome://browser/skin/window-controls/restore.svg) !important }
-
-
-
-/* align bar text */ 
-#urlbar .urlbar-input-box {
-  text-align: center !important; 
-}
-
-
-
-
-
-:root {
-  --sidebar-hover-width: 52px;
-  --sidebar-visible-width: 320px;
-}
-
-#sidebar-header{ display: none }
-
-
-
-
-#sidebar-box {
-  --bar-width: 30px;
-  position: relative !important;
-  overflow-x: hidden !important;
-  /* margin-right: calc(10px * -1) !important; */
-  /* left: var(--bar-width) !important; */
-  min-width: var(--bar-width) !important;
-  max-width: var(--bar-width) !important;
-  border-right: 1px solid var(--sidebar-border-color);
-  z-index: 1;
-  transition: all 0.1s;
-}
-
-#sidebar-box:hover {
-  --expanded-width: 250px;
-  margin-right: calc(
-    calc(var(--expanded-width) - var(--bar-width)) * -1
-  ) !important;
-  /* left: var(--expanded-width) !important; */
-  min-width: var(--expanded-width) !important;
-  max-width: var(--expanded-width) !important;
-}
-
-#sidebar-box:hover #sidebar-header {
-  min-width: var(--expanded-width) !important;
-  max-width: var(--expanded-width) !important;
-}
-
-
-/* #sidebar-header is hidden by default, change "none" to "inherit" to restore it. */
-#sidebar-header {
-  min-width: var(--bar-width) !important;
-  max-width: var(--bar-width) !important;
-  overflow: hidden !important;
-}
-
-/* #sidebar-splitter styles the divider between the sidebar and the rest of the browser. */
-#sidebar-splitter {
-  display: none;
-}
